[feat/week06] 6.3.2 added NewMessageEvent for manager and added tests for previous steps
