# api/manager.events.swagger.yml
@@ -9,6 +9,16 @@ servers:
 
 components:
   schemas:
+    MessageId:
+      required: [ messageId ]
+      properties:
+        messageId:
+          type: string
+          format: uuid
+          x-go-type: types.MessageID
+          x-go-type-import:
+            path: "github.com/Pickausernaame/chat-service/internal/types"
+
     BaseEvent:
       required: [ eventId, eventType, requestId ]
       properties:
@@ -23,6 +33,7 @@ components:
           type: string
           enum:
             - NewChatEvent
+            - NewMessageEvent
           description: Type of the event
         requestId:
           type: string
@@ -55,5 +66,34 @@ components:
             canTakeMoreProblems:
               type: boolean
               description: Indicates if manager can take more problems
-
-
+     
+    NewMessageEvent:
+      allOf:
+        - $ref: '#/components/schemas/BaseEvent'
+        - $ref: '#/components/schemas/MessageId'
+        - type: object
+          required: [ authorId, body, createdAt, chatId ]
+          properties:
+            authorId:
+              type: string
+              format: uuid
+              x-go-type: types.UserID
+              x-go-type-import:
+                path: "github.com/Pickausernaame/chat-service/internal/types"
+              description: Unique identifier for the author
+            body:
+              type: string
+              minLength: 1
+              maxLength: 3000
+              description: Body of the message
+            createdAt:
+              type: string
+              format: date-time
+              description: Date and time of event creation
+            chatId:
+              type: string
+              format: uuid
+              x-go-type: types.ChatID
+              x-go-type-import:
+                path: "github.com/Pickausernaame/chat-service/internal/types"
+              description: Unique identifier for the chat
